# qcd-vortex-entanglement

./: .zenodo.json  CITATION.cff  MANIFEST.in  README.es.md  README.md  README_ENGLISH.md  environment.yml  pyproject.toml  requirements-complete.txt  requirements-dev.txt  requirements.txt  setup.py
.github/: GITHUB_ACTIONS_GUIDE.md  dependabot.yml
.github/workflows/: docs.yml  lint.yml  publish.yml  tests.yml
data/: .gitignore  README (2).md
data/sample_configs/: belle2_analysis.yaml  mps_default.yaml
docs/: BELLE2_SETUP.md  CONDA_GUIDE.md  IBM_QUANTUM_ACCESS.md  INSTALLATION.md  INSTALL_GUIDE.md  PIP_VS_CONDA.md
notebooks/: 01_vortex_dynamics_tutorial.ipynb  02_belle2_workflow.ipynb  03_ibm_quantum_validation.ipynb
scripts/: batch_config_example.json  batch_mps_simulation.py  grid_job_monitor.py  hpc_submit_belle2.sh
src/belle2_analysis/: __init__.py  correlation_analysis.py  data_classifier.py  grid_submission.py
src/ibm_validation/: __init__.py  injection_tests.py  quantum_verification.py  squeezed_state_prep.py
src/seemps_vortex/: __init__.py  center_vortex.py  collective_squeezing.py  entanglement_detection.py  mvc_threshold.py  phase_diagram.py  tmst_threshold.py
test/: README.md  __init__.py  conftest.py  test_entanglement.py  test_injection_qiskit.py  test_tmst_injection.py  test_vortex_mps.py  validation_tools.py
test/gaussian/: conftest.py  run_toy_test.py  test_entanglement.py
