[build-system]
requires = ["setuptools>=65.0", "wheel", "setuptools_scm[toml]>=7.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qcd-vortex-entanglement"
dynamic = ["version"]
description = "QCD Vortex Entanglement Analysis Framework"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@institution.edu"}
]
keywords = [
    "qcd",
    "vortex",
    "entanglement",
    "tensor-networks",
    "belle2",
    "quantum-computing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "h5py>=3.8.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "joblib>=1.3.0",
]

[project.optional-dependencies]
belle2 = [
    "uproot>=5.0.0",
    "awkward>=2.0.0",
    "particle>=0.23.0",
    "iminuit>=2.24.0",
]
quantum = [
    "qiskit>=1.0.0",
    "qiskit-ibm-runtime>=0.19.0",
    "qiskit-aer>=0.13.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "isort>=5.12.0",
]
docs = [
    "sphinx>=7.1.0",
    "sphinx-rtd-theme>=1.3.0",
    "nbsphinx>=0.9.3",
]
all = [
    "uproot>=5.0.0",
    "awkward>=2.0.0",
    "particle>=0.23.0",
    "qiskit>=1.0.0",
    "qiskit-ibm-runtime>=0.19.0",
    "plotly>=5.17.0",
    "seaborn>=0.13.0",
]

[project.scripts]
vortex-simulate = "seemps_vortex.cli:main"
belle2-analyze = "belle2_analysis.cli:main"
ibm-validate = "ibm_validation.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/qcd-vortex-entanglement"
Documentation = "https://qcd-vortex-entanglement.readthedocs.io/"
Repository = "https://github.com/yourusername/qcd-vortex-entanglement"
Issues = "https://github.com/yourusername/qcd-vortex-entanglement/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.json", "*.md"]

[tool.setuptools_scm]
write_to = "src/seemps_vortex/_version.py"

[tool.black]
line-length = 100
target-version = ['py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "gpu: marks tests that require GPU",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
